[package]
name = "pi_db"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
lazy_static = "1.3"
fnv = "1.0.3"
parking_lot = "0.11"
crc = "*"
pi_atom = "0.1"
pi_guid = "0.1"
pi_bon = "0.1"
pi_sinfo = "0.1"
pi_ordmap = "0.1"
pi_time = "0.1"
pi_handler = "0.1"
pi_async = "0.1"
futures = "0.3.4"
pi_store = { path = "../pi_store"}
pi_hash = "0.1"
num_cpus = "1.13.0"
chrono = "0.4"
pi_async_file = "0.1"

[dev-dependencies]
crossbeam-channel = "0.5"
env_logger = "0.8"
