[package]
name = "pi_db"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.11"
futures = "0.3"
crossbeam-channel = "0.5"
async-stream = "0.3"
bytes = "1.0"
dashmap = "4.0"
log = "0.4"
pi_async = "0.2"
pi_async_file = "0.1"
pi_async_transaction = "0.1"
pi_store = { path = "../pi_store" }
pi_atom = "0.1"
pi_guid = "0.1"
pi_bon = "0.1"
pi_sinfo = "0.1"
pi_ordmap = "0.1"
pi_hash = "0.1"



[dev-dependencies]
crossbeam-channel = "0.5"
env_logger = "0.9"
fastrand = "1.5"
pi_time = "0.1"